[gd_scene load_steps=5 format=3 uid="uid://bim2dski2fp35"]

[ext_resource type="Script" uid="uid://bsuwk8okbttoi" path="res://scenes/ui/pokemon_list.gd" id="1_nlnlb"]
[ext_resource type="Script" uid="uid://bdb6i6bah667h" path="res://scenes/ui/pokemon_list_container.gd" id="1_v7vxt"]
[ext_resource type="Script" uid="uid://dwsd3xkatk3vt" path="res://scenes/ui/pokemon_filter.gd" id="3_lxh2f"]
[ext_resource type="Script" uid="uid://wwwkdsxa0ont" path="res://scenes/ui/map_menu_controller.gd" id="4_controller"]

[node name="MapMenu" type="CanvasLayer"]
layer = 2

[node name="MapMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_controller")

[node name="BottomButtons" type="HBoxContainer" parent="MapMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -46.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"BoxContainerSpaced"
alignment = 2

[node name="SavePositionsButton" type="Button" parent="MapMenu/BottomButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"Secondary"
text = "Save Positions"

[node name="LevelEditorButton" type="Button" parent="MapMenu/BottomButtons"]
layout_mode = 2
theme_type_variation = &"Secondary"
text = "Level Editor"

[node name="TogglePokemonListButton" type="Button" parent="MapMenu/BottomButtons"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Add Pokemon"

[node name="PokemonListContainer" type="CenterContainer" parent="MapMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v7vxt")

[node name="PanelContainer" type="PanelContainer" parent="MapMenu/PokemonListContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MapMenu/PokemonListContainer/PanelContainer"]
layout_mode = 2
theme_type_variation = &"BoxContainerSpaced"

[node name="Header" type="HBoxContainer" parent="MapMenu/PokemonListContainer/PanelContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MapMenu/PokemonListContainer/PanelContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PanelHeader"
text = "Add Pokemon"

[node name="PokemonFilter" type="LineEdit" parent="MapMenu/PokemonListContainer/PanelContainer/VBox/Header"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Search..."
clear_button_enabled = true
select_all_on_focus = true
script = ExtResource("3_lxh2f")

[node name="PokemonList" type="ItemList" parent="MapMenu/PokemonListContainer/PanelContainer/VBox"]
custom_minimum_size = Vector2(550, 136)
layout_mode = 2
mouse_filter = 1
allow_search = false
max_columns = 4
same_column_width = true
fixed_column_width = 125
fixed_icon_size = Vector2i(125, 125)
script = ExtResource("1_nlnlb")

[node name="Hint" type="Label" parent="MapMenu/PokemonListContainer/PanelContainer/VBox"]
layout_mode = 2
theme_type_variation = &"Caption"
text = "Click a Pokemon to add it to the map"
horizontal_alignment = 1

[connection signal="pressed" from="MapMenu/BottomButtons/SavePositionsButton" to="MapMenu" method="_on_save_positions_button_pressed"]
[connection signal="pressed" from="MapMenu/BottomButtons/LevelEditorButton" to="MapMenu" method="_on_level_editor_button_pressed"]
[connection signal="toggled" from="MapMenu/BottomButtons/TogglePokemonListButton" to="MapMenu/PokemonListContainer" method="_on_button_toggled"]
[connection signal="text_changed" from="MapMenu/PokemonListContainer/PanelContainer/VBox/Header/PokemonFilter" to="MapMenu/PokemonListContainer/PanelContainer/VBox/PokemonList" method="_on_pokemon_filter_text_changed"]
[connection signal="item_activated" from="MapMenu/PokemonListContainer/PanelContainer/VBox/PokemonList" to="MapMenu/PokemonListContainer/PanelContainer/VBox/PokemonList" method="_on_item_activated"]
